Updated last query

--- a/Home_Sales_colab.ipynb
+++ b/Home_Sales_colab.ipynb
@@ -2,29 +2,32 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "ad9a8009-f08b-4887-9bc5-05b46e36350d"
+        "outputId": "4bbcc5af-0d19-4a0b-add6-96134dcf8b43"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
-            "\r0% [Connecting to archive.ubuntu.com (91.189.91.83)] [Connected to cloud.r-proj\r                                                                               \rHit:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "Hit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:4 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Hit:5 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
-            "Hit:6 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Hit:8 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "Hit:9 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "Hit:10 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
+            "\r0% [Waiting for headers] [1 InRelease 12.7 kB/110 kB 12%] [Connecting to cloud.\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [1 InRelease 69.2 kB/110 kB 63%] [Connecting to cloud.r-project.org] [Connec\r                                                                               \rGet:3 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
+            "\r0% [3 InRelease 38.8 kB/119 kB 33%] [1 InRelease 69.2 kB/110 kB 63%] [Connected\r0% [3 InRelease 53.3 kB/119 kB 45%] [Connected to cloud.r-project.org (18.67.65\r                                                                               \rHit:4 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "\r0% [3 InRelease 111 kB/119 kB 94%] [Connecting to ppa.launchpadcontent.net (185\r0% [Connecting to ppa.launchpadcontent.net (185.125.190.52)] [Waiting for heade\r                                                                               \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
+            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
+            "Get:8 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,037 kB]\n",
+            "Hit:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,337 kB]\n",
+            "Hit:11 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
+            "Hit:12 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Fetched 2,712 kB in 2s (1,436 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -55,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -71,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 35,
       "metadata": {
         "id": "wOJqxG_RPSwp"
       },
@@ -97,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0FsXCmipUWOc",
-        "outputId": "6a7c2bf4-ef94-451a-8821-a2e66988dfac"
+        "outputId": "442c1c80-8104-412c-9a7d-673c05c9b5b3"
       },
-      "execution_count": 5,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 37,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -149,13 +152,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 38,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25ce00d5-d05b-4b2f-f248-2332d66acdc7"
+        "outputId": "3b697c5b-0bea-485e-f50b-3fd188fcdaf0"
       },
       "outputs": [
         {
@@ -178,13 +181,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 39,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79a542fc-0a45-4b26-ea1d-de6f432418c6"
+        "outputId": "5419a407-fe21-4e5f-f659-5badbe33c52b"
       },
       "outputs": [
         {
@@ -214,13 +217,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 40,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d331733-3b6e-4a5c-8892-dad6d1d6b77a"
+        "outputId": "60e150a9-b409-4bec-837b-624c1135674e"
       },
       "outputs": [
         {
@@ -251,26 +254,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "fe46160e-2e74-482b-83dc-ee33fdd96a98"
+        "outputId": "0163fa99-8e64-48ba-f0ab-8180042af09c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-------------------+\n",
-            "|round(avg(price), 2)|round(avg(view), 2)|\n",
-            "+--------------------+-------------------+\n",
-            "|           473796.26|              32.26|\n",
-            "+--------------------+-------------------+\n",
+            "+----------+--------------------+-------------------+\n",
+            "|date_built|round(avg(price), 2)|round(avg(view), 2)|\n",
+            "+----------+--------------------+-------------------+\n",
+            "|      2015|           471517.37|              31.89|\n",
+            "|      2013|           476837.88|              32.61|\n",
+            "|      2014|           475674.82|              32.28|\n",
+            "|      2012|           475524.98|              33.48|\n",
+            "|      2016|           478550.09|              32.91|\n",
+            "|      2010|           463301.08|              30.64|\n",
+            "|      2011|           472861.91|              32.28|\n",
+            "|      2017|           475884.72|              32.03|\n",
+            "+----------+--------------------+-------------------+\n",
             "\n",
-            "--- 0.5114758014678955 seconds ---\n"
+            "--- 0.6576404571533203 seconds ---\n"
           ]
         }
       ],
@@ -279,20 +289,20 @@
         "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
         "\n",
         "start_time = time.time()\n",
-        "spark.sql(\"SELECT ROUND(avg(price),2), ROUND(avg(view),2) FROM home_sales WHERE price>=350000\").show()\n",
+        "spark.sql(\"SELECT date_built, ROUND(avg(price),2), ROUND(avg(view),2) FROM home_sales WHERE price>=350000  GROUP BY date_built\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 42,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7748dce-8bcb-4932-dc86-dfad9338e589"
+        "outputId": "da3dda18-f5d8-466c-964c-38673b18fabb"
       },
       "outputs": [
         {
@@ -303,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 42
         }
       ],
       "source": [
@@ -313,13 +323,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 43,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e2cc77d-d2a7-4602-c9c7-d62ec8a62525"
+        "outputId": "9503eb26-a590-4cba-bbad-f7228fd15276"
       },
       "outputs": [
         {
@@ -330,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 43
         }
       ],
       "source": [
@@ -340,26 +350,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "7343e523-8769-4bd7-ba8e-6a5d0d44f510"
+        "outputId": "f358f80a-911e-4ff8-f385-a037097825a2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-------------------+\n",
-            "|round(avg(price), 2)|round(avg(view), 2)|\n",
-            "+--------------------+-------------------+\n",
-            "|           473796.26|              32.26|\n",
-            "+--------------------+-------------------+\n",
+            "+----------+--------------------+-------------------+\n",
+            "|date_built|round(avg(price), 2)|round(avg(view), 2)|\n",
+            "+----------+--------------------+-------------------+\n",
+            "|      2015|           471517.37|              31.89|\n",
+            "|      2013|           476837.88|              32.61|\n",
+            "|      2014|           475674.82|              32.28|\n",
+            "|      2012|           475524.98|              33.48|\n",
+            "|      2016|           478550.09|              32.91|\n",
+            "|      2010|           463301.08|              30.64|\n",
+            "|      2011|           472861.91|              32.28|\n",
+            "|      2017|           475884.72|              32.03|\n",
+            "+----------+--------------------+-------------------+\n",
             "\n",
-            "--- 0.41739821434020996 seconds ---\n"
+            "--- 0.5927722454071045 seconds ---\n"
           ]
         }
       ],
@@ -368,14 +385,14 @@
         "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
         "\n",
         "start_time = time.time()\n",
-        "spark.sql(\"SELECT ROUND(avg(price),2), ROUND(avg(view),2) FROM home_sales WHERE price>=350000\").show()\n",
+        "spark.sql(\"SELECT date_built, ROUND(avg(price),2), ROUND(avg(view),2) FROM home_sales WHERE price>=350000  GROUP BY date_built\").show()\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 45,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -387,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 46,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -399,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 47,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -411,26 +428,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "77fc0b0f-ecfd-4c3f-dbda-843b4dc3551f"
+        "outputId": "faa4b91d-a275-4e96-a6be-5d475fa3c2b6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-------------------+\n",
-            "|round(avg(price), 2)|round(avg(view), 2)|\n",
-            "+--------------------+-------------------+\n",
-            "|           473796.26|              32.26|\n",
-            "+--------------------+-------------------+\n",
+            "+----------+--------------------+-------------------+\n",
+            "|date_built|round(avg(price), 2)|round(avg(view), 2)|\n",
+            "+----------+--------------------+-------------------+\n",
+            "|      2015|           471517.37|              31.89|\n",
+            "|      2013|           476837.88|              32.61|\n",
+            "|      2014|           475674.82|              32.28|\n",
+            "|      2012|           475524.98|              33.48|\n",
+            "|      2016|           478550.09|              32.91|\n",
+            "|      2010|           463301.08|              30.64|\n",
+            "|      2011|           472861.91|              32.28|\n",
+            "|      2017|           475884.72|              32.03|\n",
+            "+----------+--------------------+-------------------+\n",
             "\n",
-            "--- 1.0365521907806396 seconds ---\n"
+            "--- 0.43454480171203613 seconds ---\n"
           ]
         }
       ],
@@ -440,7 +464,7 @@
         "# Determine the runtime and compare it to the cached version.\n",
         "\n",
         "start_time = time.time()\n",
-        "spark.sql(\"SELECT ROUND(avg(price),2), ROUND(avg(view),2) FROM p_home_sales WHERE price>=350000\").show()\n",
+        "spark.sql(\"SELECT date_built, ROUND(avg(price),2), ROUND(avg(view),2) FROM home_sales WHERE price>=350000  GROUP BY date_built\").show()\n",
         "\n",
         "\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
@@ -448,13 +472,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 49,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ecbb19c-2b89-4616-8b23-be3c3112fa1d"
+        "outputId": "34ec6fad-5a67-4f7e-b7cc-d5a069633bc4"
       },
       "outputs": [
         {
@@ -465,7 +489,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 49
         }
       ],
       "source": [
@@ -475,13 +499,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 50,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07584622-d68e-44b7-eb74-d12df538c7c3"
+        "outputId": "56854422-30b0-4f6d-a950-b725fa3d2cba"
       },
       "outputs": [
         {
@@ -492,7 +516,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 50
         }
       ],
       "source": [
